# model-lens

./: .aider.instructions.md  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
dev/: aider-run.sh  format-and-test.sh  format.sh  model-lens-build.sh  model-lens-publish.sh  model-lens-release.sh  model-lens-runs.sh  nvm-install.sh  rm-caches.sh  test.sh  ui-build.sh  ui-clean.sh  ui-install.sh  ui-reset.sh  ui-test.sh  venv-create.sh  venv-reset.sh
spec/: architecture.md  configuration.md  conventions.md  errors.md  glossary.md  structure.md  workflow.md
spec/decisions/: 0001_initial_toolchain.md  0002_single_bundled_inference_engine.md  0003_in_memory_config_only.md  0004_bundled_static_assets.md  0005_sse_over_websocket.md  0006_config_applied_in_loop.md  0007_opencv_for_camera_sources.md  0008_concurrency_and_thread_safety.md  0009_frame_data_ownership_and_copy_strategy.md  0010_label_map_empty_line_handling.md  0011_retry_and_recovery_mechanism_design.md  0012_package_data_resource_resolution.md  0013_bounded_queue_drop_oldest_strategy.md  0014_30fps_output_rate_cap.md  0015_jpeg_encoding_in_pipeline.md  0016_fatal_parse_error_exit.md  0017_fastapi_lifespan_over_on_event.md  0018_pipeline_dependency_injection_via_app_state.md  0019_sse_keepalive_and_idle_timeout.md  0020_pydantic_discriminated_union_for_camera_config.md  0021_stdlib_tomllib_for_config.md  0022_custom_exception_hierarchy_and_single_string_message.md  0023_model_registry_and_yolo_backend.md  0024_bgr_rgb_conversion_in_pipeline.md  0025_explicit_button_triggered_runtime_config_update.md  0026_canvas_bounding_box_rendering.md  README.md
spec/test/: README.md
src/model_lens/: __init__.py  app.py  camera_capture.py  config.py  detection_pipeline.py  entities.py  exceptions.py  inference_engine.py  schemas.py
src/ui/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
test/fixtures/: conftest.py
test/model_lens/: conftest.py  test_app.py  test_camera_capture.py  test_config.py  (+5 more)
(+64 files in other folders)
