[project]
name = "model_lens"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.8.0,<4.10.0",
    "ultralytics==8.4.33",
    "uvicorn==0.42.0",
]

[dependency-groups]
dev = [
    "types-dataclasses==0.6.6",
    "types-requests==2.31.0.2",
    "types-setuptools==68.2.0.0",
    "setuptools==78.1.1",
    "mypy==1.6.1",
    "isort==5.12.0",
    "black[jupyter]==26.3.1",
    "docformatter==1.7.5",
    "pylint==4.0.5",
    "flake8==7.3.0",
    "ruff==0.1.4",
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "pytest-mock>=3.14.1",
    "aider-chat==0.86.2",
]

[tool.isort]
line_length = 120
indent = "    "
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
known_first_party = ["src/model_lens"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.pylint.TYPECHECK]
generated-members = ["cv2.*"]

[tool.pylint."MESSAGES CONTROL"]
max-line-length = 120
disable = "duplicate-code,too-few-public-methods,useless-import-alias,useless-super-delegation,too-many-instance-attributes,too-many-branches,too-many-locals,too-many-statements"

[tool.pytest.ini_options]
minversion = "6.2"
addopts = "-qq"
log_cli = "true"
log_cli_level = "INFO"
testpaths = [
    "tests",
]

[tool.mypy]
ignore_missing_imports = true
strict = true

[tool.docformatter]
wrap-summaries = 120
wrap-descriptions = 120

[tool.ruff]
target-version = "py311"
line-length = 120
select = ["D", "E", "F", "W", "B", "ISC", "C4", "UP"]
fixable = ["D", "E", "F", "W", "B", "ISC", "C4", "UP"]
ignore = ["B024", "B027"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "proto",
]

[tool.ruff.pydocstyle]
convention = "google"
